deploy/kubernetes/service.yaml
# Copyright 2025 The vLLM Semantic Router Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: semantic-router
  labels:
    app: semantic-router
spec:
  type: ClusterIP
  ports:
  - port: 50051
    targetPort: grpc
    protocol: TCP
    name: grpc
  selector:
    app: semantic-router
---
apiVersion: v1
kind: Service
metadata:
  name: semantic-router-metrics
  labels:
    app: semantic-router
    service: metrics
spec:
  type: ClusterIP
  ports:
  - port: 9190
    targetPort: metrics
    protocol: TCP
    name: metrics
  selector:
    app: semantic-router
